# prettyt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: coverage.yml  release.yml  test.yml
examples/: colored_text.rs  global_override.rs  macro_usage.rs  panel_demo.rs  test.rs  text_attribute.rs
src/: lib.rs  main.rs  style.rs  test_utils.rs
src/layout/: mod.rs  panel.rs  text.rs
src/panel/: mod.rs
src/style/: color.rs  css_colors.rs  macros.rs  mod.rs
src/terminal/: app.rs  detect.rs  dimensions.rs  mod.rs  registry.rs  width.rs
