[package]
name = "prettyt"
version = "0.1.0"
edition = "2024"
authors = ["Parneet Sidhu <parneetsingh022@gmail.com>"]
description = "A lightweight, environment-aware ANSI terminal text styling library with automatic color capability detection."
documentation = "https://docs.rs/prettyt"
repository = "https://github.com/parneetsingh022/prettyt"
readme = "README.md"
keywords = ["ansi", "terminal", "color", "styling", "cli"]
categories = ["command-line-interface", "rendering"]
license = "Apache-2.0"

[dependencies]


[package.metadata.release]
# Replaces the [Unreleased] marker with the real version and date on execution
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}" }
]
tag-name = "v{{version}}"
push = true
publish = true