[package]
name = "prettyt"
version = "0.2.0"
edition = "2024"
authors = ["Parneet Sidhu <parneetsingh022@gmail.com>"]
description = "A lightweight, environment-aware ANSI terminal text styling library with automatic color capability detection."
documentation = "https://docs.rs/prettyt"
repository = "https://github.com/parneetsingh022/prettyt"
readme = "README.md"
keywords = ["ansi", "terminal", "color", "styling", "cli"]
categories = ["command-line-interface", "rendering"]
license = "Apache-2.0"

[features]
default = []

terminal_size = ["dep:terminal_size"]

panel = ["terminal_size"]

[dependencies]
terminal_size = { version = "0.4.4", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[package.metadata.release]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}" }
]

tag-name = "v{{version}}"
tag-message = "Release {{version}}"

pre-release-commit-message = "chore: release version {{version}}"

sign-commit = false
sign-tag = false
push = false
publish = false
